# schachtmeister3

./: .gitignore  AGENTS.md  PROTOCOL.md  README.md  mypy.ini  project.toml  pyproject.toml  ruff.toml  setup.py
.github/workflows/: check.yml
schachtmeister3/: client.py  common.py  judge.py  main.py  schachts.py  udp.py
scripts/: check
tests/: conftest.py  test_client.py  test_judge.py  test_schachts.py
